- fixed aspect ratio for images on grid view. removed fixed heing 120px - clipping species name to two lines and placing ... for any overflow

--- a/web-app/css/wgp.css
+++ b/web-app/css/wgp.css
@@ -60,7 +60,7 @@ font-size: 0.9em;
 
 .list_view .snippet {
 padding: 5px;
-width: 630px;         
+/* width: 630px;          */
 }
 
 .snippet.tablet {
